tests/syntax/oracle/typedef_namespace_bts1500.1.res.oracle
[kernel] Parsing share/libc/__fc_builtin_for_normalization.i (no preprocessing)
[kernel] Parsing tests/syntax/typedef_namespace_bts1500.c (with preprocessing)
[kernel] syntax error at tests/syntax/typedef_namespace_bts1500.c:23:
         21      // error: digit is now a variable
         22    #ifdef HIDING_TYPEDEF
         23      digit y = 5;
               ^^^^^^^^^^^^^^
         24    #endif
         25      return x + digit+A;
[kernel] Frama-C aborted: invalid user input.
